# openprod

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: error.rs  field_value.rs  hlc.rs  identity.rs  ids.rs  lib.rs  operations.rs  vector_clock.rs
crates/engine/: Cargo.toml
crates/engine/src/: error.rs  lib.rs  overlay.rs  undo.rs
crates/harness/: Cargo.toml
crates/harness/src/: lib.rs  network.rs  peer.rs
crates/harness/tests/: phase1.rs  phase2.rs  phase3.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs  schema.rs  sqlite.rs  traits.rs
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  FUNCTIONALITY.md  INVARIANTS.md  README.md  SCENARIOS.md
docs/archive/: NEW_PLAN_BASIC.md  approval-workflows.md  proposals.md  schema-evolution.md  snapshots.md  wire-format.md
docs/plans/: 2026-02-02-crdt-architecture-design.md  2026-02-03-module-system-design.md  2026-02-05-phase1-core-storage-oplog.md  2026-02-05-v1-core-design.md  deferred-from-phase1-audit.md  open-topics.md  structural-concerns.md
docs/spec/: README.md  conflicts.md  crdt.md  data-model.md  hlc.md  identity.md  modules.md  operations.md  ordered-edges.md  overlays.md  query-language.md  rules.md  scripts.md  sqlite-schema.md  sync.md  workspace.md
