[package]
name = "openprod-storage"
version = "0.1.0"
edition.workspace = true

[dependencies]
openprod-core.workspace = true
rusqlite.workspace = true
rmp-serde.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile.workspace = true
